@@ -5,6 +5,7 @@
 [![License](https://eddelbuettel.github.io/badges/GPL2+.svg)](http://www.gnu.org/licenses/gpl-2.0.html)
 [![Last Commit](https://img.shields.io/github/last-commit/qlcal/qlcal-r)](https://github.com/qlcal/qlcal-r)
 [![CRAN](https://www.r-pkg.org/badges/version/qlcal)](https://cran.r-project.org/package=qlcal)
+[![r-universe](https://qlcal.r-universe.dev/badges/qlcal)](https://qlcal.r-universe.dev/qlcal)
 [![Dependencies](https://tinyverse.netlify.com/badge/qlcal)](https://cran.r-project.org/package=qlcal)
 [![Downloads](https://cranlogs.r-pkg.org/badges/qlcal?color=brightgreen)](https://www.r-pkg.org/pkg/qlcal)
 
@@ -163,12 +164,10 @@ remotes::install_github("qlcal/qlcal-r")
 
 It only requires `Rcpp` and `BH` both of which are available whereever `R` itself runs.
 
-Note that the package requires C++14 or newer due to the `BH` (_i.e._ Boost) use.
-As R nags when we set `CXX_STD` we switched to requested `R (>= 4.2.0)` where this requirement is
-implicitly satisfied.
-_If you need the package on an older R version, remove that versioned
-constraint and uncomment `CXX_STD = CXX14` in `src/Makevars` (or `src/Makevars.win`)._
-
+Note that the package requires C++14 or newer due to the `BH` (_i.e._ Boost) use.  As R nags when we
+set `CXX_STD` we switched to requested `R (>= 4.2.0)` where this requirement is implicitly
+satisfied.  On an older R version, the `configure` scripts uncomments `CXX_STD = CXX14` in
+`src/Makevars` (or `src/Makevars.win`).
 
 ### Authors
 
