@@ -1,3 +1,4 @@
 
 rm -f src/*.o src/*.so src/*.dylib src/*~ *~ \
-   src/*/*.o src/*/*/*.o src/*/*/*/*.o
+   src/*/*.o src/*/*/*.o src/*/*/*/*.o \
+   src/Makevars src/Makevars.win
